# ExtCourseWork

./: CMakeLists.txt  Driver.cpp  LICENSE  README.md  driver.cpp
Game/: BotController.h  Enemy.h  EventManager.h  GameManager.h  GameObject.h  Map.h  MapManager.h  Player.h  ScreenManager.h  Ship.h  Tank.h  UI_Manager.h  Wall.h  Weapon.h  asteroid.h  bot_controller.hpp  drawable_object.hpp  game_manager.hpp  game_object.hpp  maps.tnks  moveable_object.hpp  moving_object.hpp  sprite.hpp  stationary_object.hpp  tank.hpp  weapon.hpp
Game/Lib/: Lib.cpp  cute_c2.h
Game/UI/: ui_base.hpp  ui_game_over.hpp  ui_hud.hpp  ui_leader_board.hpp  ui_main_menu.hpp  ui_manager.hpp  ui_pause_menu.hpp  ui_rules.hpp
cmake/: FindSDL_draw.cmake
